feat: creating Create struct and fixing swagger
